<resources>
    <string name="app_name">ProjectManager</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="road_number">Road Number</string>
    <string name="postal_code">Postal code</string>
    <string name="road_name">Road Name</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="post">Post</string>
    <string name="personal_information">Personal Information</string>
    <string name="address">Address</string>
    <string name="add">Add</string>
    <string name="snackbar_text_add_success">Developer Created Successfully</string>
    <string name="all">All</string>
    <string name="web_developer">Web Developer</string>
    <string name="mobile_designer">Mobile Designer</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="add_a_new_developer_float_content_description">Add a new Developer</string>
    <string name="developer_image_content_description">Developer image</string>
    <string name="home_icon_description">home icon</string>
    <string name="delete_a_developer">Delete a developer</string>
    <string name="delete_developer_confirm">Would you like to permanently delete it ?</string>
    <string name="confirm">Confirm</string>
    <string name="create_a_new_project">Create a new project</string>
    <string name="project_name">Project name</string>
    <string name="customer">Customer</string>
    <string name="description_of_the_project">Description of the project</string>
    <string name="create_new_project">Create new project</string>
    <string name="ending_date">Ending date</string>
    <string name="date_format">dd/mm/yyyy</string>
    <string name="starting_date">Starting date</string>
    <string name="module_name">Module name</string>
    <string name="description_of_the_module">Description module</string>
    <string name="create_new_module">Create module</string>
    <string name="create_a_new_module">Create a new module</string>
    <string name="modules">Modules</string>
    <string name="projects">Projects</string>
    <string name="developers">Developers</string>
    <string name="features">Features</string>
    <string name="description_of_the_feature">Description of the feature</string>
    <string name="feature_name">feature name</string>
    <string name="description_of_the_task">Description task</string>
    <string name="task_name">Task name</string>
    <string name="choose_a_module">Choose a module</string>
    <string name="choose_developers">Choose developers</string>
    <string name="features_done_placeholder">Features done: %1$d</string>
    <string name="features_progress_placeholder">Features in progress: %1$d</string>
    <string name="features_overdue_placeholder">Features overdue: %1$d</string>
    <string name="choose_a_project">Choose a project</string>
    <string name="notification_tasks_channel_id" translatable="false">notification_tasks_channel_id</string>
    <string name="notification_tasks_name" translatable="false">Tasks notifications</string>
    <string name="notification_tasks_description" translatable="false">Notifications that triggers about tasks</string>
</resources>