<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/projectListFragment"
        android:enabled="true"
        android:icon="@drawable/ic_projects_24"
        android:title="@string/projects"/>
    <item
        android:id="@+id/moduleListFragment"
        android:enabled="true"
        android:icon="@drawable/ic_view_module_24"
        android:title="@string/modules"/>
    <item
        android:id="@+id/featureListFragment"
        android:enabled="true"
        android:icon="@drawable/ic_feature_24"
        android:title="@string/features"/>
    <item
        android:id="@+id/developerListFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/developers"/>
</menu>